--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -7,22 +7,27 @@
   
     <p>
       <b>Name</b>
+      <%= @ad.name %>
     </p>
     
     <p>
       <b>Desc</b>
+      <%= @ad.desc %>
     </p>
     
     <p>
       <b>Price</b>
+      <%= @ad.price %>
     </p>
     
     <p>
       <b>Seller Id</b>
+      <%= @ad.seller_id %>
     </p>
     
     <p>
       <b>Email:</b>
+      <%= @ad.email %>
     </p>
     
   </body>
