add a new controllers: new and create and form in view

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% for ad in @ads %>
-  <li><%= link_to ad.name, ads_path %></li>
+  <li><a href="/ads/<%= ad.id %>"><%= ad.name %></a></li>
   <% end %>
 </ul>  
